<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6200EE"
    tools:context=".LivingFragment">

    <FrameLayout
        android:id="@+id/layout_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/videoPKLayout"
        layout="@layout/view_video_pk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="12dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_channel_id"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        tools:text="123" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_channel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:hint="@string/enter_pk_channel_id"
        android:textColorHint="#FFD34D"
        app:boxBackgroundColor="#33A0C5FF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="#FFD34D"
        app:hintTextColor="#FFD34D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal70">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pk_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="7"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/bg_edit_cursor"
            tools:text="123" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bt_submit_pk"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_btn_primary_r24"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/start_pk"
        android:textColor="#282828"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/layout_channel"
        app:layout_constraintStart_toEndOf="@id/layout_channel"
        app:layout_constraintTop_toTopOf="@id/layout_channel" />

    <TextView
        android:id="@+id/bt_switch_stream"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_btn_primary_r24"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/cdn_audience"
        android:textColor="#282828"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />
</androidx.constraintlayout.widget.ConstraintLayout>